title changes and fixed about detail

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Fayeishere</title>
+        <title>Fayeishere: Web Site Development | Faye Purdum - Portland, OR</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -202,7 +202,6 @@
                     <div class="widget span3">
                         <h4>About Me</h4>
                         <p>I'm a web developer specializing in marketing and UX design.</p>
-                        <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
 <!--                         <h4>Latest Tweets</h4>
